--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,383 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body::-webkit-scrollbar {
+  display: none;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  /* width: 100vw;
+  height: 100vh;
+  background: linear-gradient(180deg, #232323 0%, #2F2F2F 13.02%, #232323 100%); */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.home {
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(180deg, #232323 0%, #2F2F2F 13.02%, #232323 100%);
+  opacity: 99.9999%;
+}
+
+.booking {
+  width: 100vw;
+  /* height: 2160px; */
+  height: 1920px;
+  background: linear-gradient(180deg, #232323 0%, #2F2F2F 7.29%, #232323 100%);
+}
+
+.container {
+  display: flex;
+  justify-content: center;
 }
 
 .card {
-  padding: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 230px;
+  height: 260px;
+  border-radius: 15px;
+  position: relative;
 }
 
-.read-the-docs {
-  color: #888;
+.gap {
+  gap: 100px;
+}
+
+.screenicon {
+  width: 538px;
+  height: 20px;
+  border-radius: 12px;
+  background-color: white;
+}
+
+.seats div div {
+  height: 68px;
+  width: 68px;
+  border-radius: 50%;
+  background-color: white;
+  /* border: 1px solid white; */
+}
+
+.seats div div input {
+  width: 100%;
+  height: 100%;
+  opacity: 10%;
+}
+
+.seats div.green {
+  background-color: green;
+}
+
+.cardpicture {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -10;
+  border-radius: 15px;
+
+}
+
+h4.cardtitle {
+  text-decoration: none;
+  color: white;
+}
+
+.fade {
+  position: absolute;
+  border-radius: 13px;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, #000 100%);
+  z-index: -1;
+}
+
+.cardboxes {
+  padding: 75px 187px;
+  display: flex;
+  justify-content: center;
+
+}
+
+a {
+  text-decoration: none;
+}
+
+.searchbar {
+  position: relative;
+  height: 76px;
+  width: 881px;
+
+}
+
+.searchbar input {
+  width: 100%;
+  height: 100%;
+  border-radius: 86px;
+  background: var(--input, linear-gradient(180deg, rgba(147, 147, 147, 0.42) 0%, rgba(78, 78, 78, 0.42) 99.99%, rgba(217, 217, 217, 0.00) 100%));
+  outline: none;
+  border: none;
+  padding-left: 102px;
+  padding-right: 25px;
+  color: white;
+  color: rgba(255, 255, 255, 0.50);
+  font-family: Inter;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.searchbar svg {
+  position: absolute;
+  top: 13px;
+  left: 23px;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
+
+  height: 136px;
+}
+
+h4 {
+  width: 80%;
+  font-size: 30px;
+  text-align: center;
+  text-decoration: none;
+}
+
+div.booking a {
+  width: 100px;
+  height: 100px;
+}
+
+div.booking div div div h2 {
+  width: 100%;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 80px;
+  font-style: bold;
+  font-weight: 700;
+  line-height: normal;
+  line-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+div.booking div div div.titlebox p {
+
+  width: 100%;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+
+}
+
+div.booking div div div.titlebox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 500px;
+  height: 220px;
+  margin-left: 140px;
+  margin-bottom: 20px;
+
+
+
+  /* border: 1px solid white; */
+
+}
+
+div.booking div div div.durationbox {
+  position: absolute;
+  margin-left: 700px;
+  margin-top: -50px;
+
+}
+
+div.booking div div div.durationbox p {
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 300;
+  line-height: 85%;
+  /* 17px */
+
+}
+
+
+div.booking div div.descriptionbox {
+  width: 660px;
+  height: 440px;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-left: 140px;
+  /* margin-bottom: 100px; */
+}
+
+div.booking div div img {
+  width: 700px;
+  height: 393px;
+  border-radius: 15px;
+  margin-top: 80px;
+}
+
+.gap2 {
+  gap: 126px;
+}
+
+.bookbtnbox {
+  position: relative;
+  width: 439px;
+  height: 131px;
+  margin-bottom: 100px;
+}
+
+.bookbtnbox button {
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+  color: #404040;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding-right: 120px;
+  outline: none;
+  border: none;
+
+}
+
+.bookbtnbox svg {
+  position: absolute;
+  top: 26px;
+  left: 300px;
+}
+
+.when {
+  display: flex;
+  justify-content: left;
+
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+  margin-left: 160px;
+}
+
+div.shows {
+  display: flex;
+  justify-content: space-between;
+  margin: 76px 162px;
+}
+
+div.shows li {
+  position: relative;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  width: 151px;
+  height: 94px;
+  padding: 20px 35px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  background: #F4F4F4;
+}
+
+div.shows li p {
+  color: #404040;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  line-height: 100%;
+  /* 35.82px */
+}
+
+div.shows li input {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 10%;
+}
+
+.gap50 {
+  gap: 50px;
+}
+
+div.seats div {
+  margin-top: 25px;
+}
+
+.emailInput {
+  width: 687px;
+  height: 76px;
+  border-radius: 63px 0px 0px 63px;
+  background: var(--input, linear-gradient(180deg, rgba(147, 147, 147, 0.42) 0%, rgba(78, 78, 78, 0.42) 99.99%, rgba(217, 217, 217, 0.00) 100%));
+  outline: none;
+  border: none;
+
+  color: rgba(255, 255, 255, 0.50);
+  font-family: Inter;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-left: 30px;
+
+
+}
+
+.confirmBooking {
+  width: 444px;
+  height: 76px;
+  border-radius: 0px 15px 15px 0px;
+  background: #F4F4F4;
+  outline: none;
+  border: none;
+
+  color: #404040;
+  font-family: Inter;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+}
+
+.bookInputs {
+  margin-top: 80px;
+}
+
+.someSpace {
+  height: 46px;
+  width: 100%;
+  background-color: transparent;
 }
